--- a/producer/producer.properties
+++ b/producer/producer.properties
@@ -1,5 +1,5 @@
 security.protocol=SASL_SSL
-#sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username='< CLUSTER API KEY >' password='< CLUSTER API SECRET >';
+sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username='${US_EAST_CLOUD_API_KEY}' password='${US_EAST_CLOUD_API_SECRET}';
 sasl.mechanism=PLAIN
 
 # Required for correctness in Apache Kafka clients prior to 2.6
